<resources>
    <string name="app_name">JustTravel</string>
    <string name="simple_travel_app_that_takes_care_of_your_holidays">Simple travel app that takes care of your holidays!</string>
    <string name="welcome">Welcome</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trips">My trips</string>
    <string name="logo_image">logo_image</string>
    <string name="add_trip">add trip</string>
    <string name="new_trip">New trip</string>
    <string name="name">Trip name</string>
    <string name="trip_destination">Trip destination</string>
    <string name="city_break">City Break</string>
    <string name="seaside">Seaside</string>
    <string name="mountains">Mountains</string>
    <string name="price">Price €</string>
    <string name="enter_start_date">Enter start date</string>
    <string name="enter_end_date">Enter end date</string>
    <string name="trip_name_empty">You need to insert the trip name!</string>
    <string name="trip_destination_empty">You need to insert the trip destination!</string>
    <string name="trip_start_date_empty">You need to insert the trip start date!</string>
    <string name="trip_end_date_empty">You need to insert the trip start date!</string>
    <string name="toast_fields_empty">Pay attention to all fields!</string>
    <string name="typeofdestinationimage">typeOfDestinationImage</string>
    <string name="trip_price">trip price</string>
    <string name="trip_destionation_name">trip destionation name</string>
    <string name="trip_name">trip name</string>
    <string name="edit_trip_text">Edit trip</string>
    <string name="edit_trip_title">Edit trip</string>
    <string name="name_not_set">Name not set</string>
    <string name="destionation_not_set">Destination not set</string>
    <string name="price_not_set">Price not set</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="trip_type_image">Trip type image</string>
    <string name="destination">Destination</string>
    <string name="partly_cloudy">Partly Cloudy</string>
    <string name="weather_icon">weather icon</string>
    <string name="thermometer_image">thermometer image</string>
    <string name="go_back_button">go back</string>
    <string name="about_us">About us</string>
    <string name="contact">Contact</string>
    <string name="edit_trip">Edit trip</string>
    <string name="details">Details</string>
    <string name="call_me">Call me</string>
    <string name="visit_me">Visit me</string>
</resources>