<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/small_margin"
    android:background="@color/blue_logo"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/tripCardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/small_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardBackgroundColor="#003554"
        card_view:cardCornerRadius="16dp"
        card_view:cardElevation="4dp"
        card_view:cardUseCompatPadding="true">

        <!-- Main Content View -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/cardview_height"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/tripImageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:contentDescription="@string/typeofdestinationimage" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardview_first_relative_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/extra_small_margin"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tripNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/cardview_element_height"
                    android:layout_alignParentStart="true"
                    android:gravity="center_vertical"
                    android:hint="@string/trip_name"
                    android:textColor="@color/blue_logo"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <CheckBox
                    android:id="@+id/star"
                    style="?android:attr/starStyle"
                    android:layout_width="@dimen/checkbox_width"
                    android:layout_height="@dimen/checkbox_height"
                    card_view:layout_constraintBottom_toBottomOf="@+id/tripNameTextView"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cardview_second_relative_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/extra_small_margin"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tripDestinationTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/cardview_element_height"
                    android:layout_alignParentStart="true"
                    android:gravity="center_vertical"
                    android:hint="@string/trip_destionation_name"
                    android:textColor="@color/blue_logo"
                    card_view:layout_constraintStart_toStartOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tripPriceTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/cardview_element_height"
                    android:layout_alignParentEnd="true"
                    android:gravity="center_vertical"
                    android:hint="@string/trip_price"
                    android:textColor="@color/blue_logo"
                    card_view:layout_constraintEnd_toEndOf="parent"
                    card_view:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>